Form action path changed to be todos

--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -29,7 +29,7 @@
         <h1>Todo App</h1>
         <div>--- Add New Todo ---</div>
         <div>
-            <form action="/addTodo" method="POST">
+            <form action="/todos" method="POST">
                 <input type="text" name="todo">
                 <input type="submit" value="Save">
             </form>
